--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,16 @@
 html, body {
   margin: 0;
   padding: 0;
+  font-family: Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 canvas {
   display: block;
+}
+
+#myTopnav {
+  width:100%;
+  height:33px;
+  font-size: 13pt;
 }
