--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,122 @@
-html, body {
+/**********GENERAL**********/
+
+:root {
+  /* Palette */
+  --verde: #5fee87;
+  --rosa: #dfabff;
+  --arancio: #ecac4c;
+  --rosso: #ec5555;
+  --grigiochiaro: #cdcdcd;
+  --grigiomedio: #b7b6b6;
+  --grigioscuro: #929292;
+  --nero: #000000;
+}
+
+html,
+body {
   margin: 0;
   padding: 0;
   font-family: Helvetica, sans-serif;
   font-weight: bold;
+  color: var(--nero);
 }
+
+canvas {
+  display: block;
+}
+
+.topnav {
+  width: 100%;
+  height: 33px;
+  font-size: 16pt;
+  line-height: 1.5;
+  display: inline-block;
+  vertical-align: middle;
+  background-color: var(--grigiochiaro);
+  text-align: center;
+  display: flex;
+  position: fixed;
+}
+
+.btn {
+  width: 100%;
+  height: 33px;
+  font-size: 16pt;
+  line-height: 1.5;
+  display: inline-block;
+  vertical-align: middle;
+  background-color: var(--grigiochiaro);
+  text-align: center;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.navbtn {
+  width: 100%;
+  cursor: pointer;
+}
+
+/**********CHAT**********/
+
+.navbtn.active {
+  background-color: var(--grigioscuro);
+}
+
+.box {
+  width: 99%;
+  font-size: 30pt;
+  line-height: 32pt;
+  padding: 0.5%;
+  font-weight: bold;
+  color: var(--nero);
+}
+
+.container {
+  position: absolute;
+  width: 100%;
+  top: 33px;
+  z-index: 1;
+  display: none;
+}
+
+.chat-container {
+  height: 100%;
+  overflow: scroll;
+}
+
+
+
+.client1 {
+  background-color: var(--verde);
+}
+
+.client2 {
+  background-color: var(--rosa);
+}
+
+.client3 {
+  background-color: var(--arancio);
+}
+
+.client4 {
+  background-color: var(--rosso);
+}
+
+/**********SEND**********/
+
+#ascicanvas {
+  width: 100vw;
+  height: 60vh;
+}
+
+#message-input {
+  border: none;
+}
+
 
 canvas {
   display: block;
