--- a/public/style.css
+++ b/public/style.css
@@ -61,6 +61,68 @@ a {
   cursor: pointer;
 }
 
+
+/**********Slideshow**********/
+
+* {box-sizing: border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  background: #ffffff;
+}
+
+/* Slides */
+.mySlides {
+  display: none;
+  padding: 200px 0;
+  text-align: center;
+  /* border: 3px solid green; */
+  margin-left: 33px;
+  margin-right: 33px;
+  margin-top: 33px;
+  margin-bottom: 66px;
+  height: 70vh;
+  }
+  
+/* Next & previous buttons */
+.prev {
+  cursor: pointer;
+  position: absolute;
+  width: auto;
+  color: #888;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  left: 33px;
+  margin-bottom: 66px;
+
+
+}
+
+/* Position the "next button" to the right */
+.next {
+  cursor: pointer;
+  position: absolute;
+  width: auto;
+  color: #888;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  right: 33px;
+  margin-bottom: 5vh;
+
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+  color: white;
+}
+
+
 /**********CHAT**********/
 
 .navbtn.active {
