--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,8 @@ body {
   font-family: Helvetica, sans-serif;
   font-weight: bold;
   color: var(--nero);
+  overflow: hidden;
+  background-color: var(--grigiomedio);
 }
 
 canvas {
@@ -36,6 +38,21 @@ canvas {
   text-align: center;
   display: flex;
   position: fixed;
+}
+
+.bottomnav {
+  width: 100%;
+  height: 33px;
+  font-size: 16pt;
+  line-height: 1.5;
+  display: inline-block;
+  vertical-align: middle;
+  background-color: var(--grigiochiaro);
+  text-align: center;
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  margin: none;
 }
 
 .btn {
@@ -60,6 +77,37 @@ a {
   cursor: pointer;
 }
 
+/**********Slideshow**********/
+
+/* Next & previous buttons */
+.prev {
+  cursor: pointer;
+  position: absolute;
+  width: auto;
+  color: var(--nero);
+  background-color: var(--grigiochiaro);
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  left: 33px;
+  margin-bottom: 66px;
+}
+
+/* Position the "next button" to the right */
+.next {
+  cursor: pointer;
+  position: absolute;
+  width: auto;
+  color: var(--nero);
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  right: 33px;
+  margin-bottom: 5vh;
+}
+
 /**********CHAT**********/
 
 .navbtn.active {
@@ -67,12 +115,13 @@ a {
 }
 
 .box {
-  width: 99%;
+  width: 100%;
   font-size: 30pt;
   line-height: 32pt;
   padding: 0.5%;
   font-weight: bold;
   color: var(--nero);
+  background-color: var(--grigiomedio);
 }
 
 .container {
@@ -85,7 +134,7 @@ a {
 
 .chat-container {
   height: 100%;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 
@@ -115,8 +164,14 @@ a {
 
 #message-input {
   border: none;
+  background-color: rgba(0, 0, 0, 0);
 }
 
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+}
 
 canvas {
   display: block;
@@ -128,7 +183,19 @@ canvas {
   font-size: 13pt;
 }
 
-.enter-room-button {cursor: pointer;}
+/* .enter-room-button {cursor: pointer;} */
+.enter-room-button {
+  position: absolute;
+  width: auto;
+  color: var(--nero);
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  right: 33px;
+  margin-bottom: 5vh;
+  display: none;
+}
 
 .active {display: block;}
 .inactive {display: none;}
