--- a/public/style.css
+++ b/public/style.css
@@ -3,8 +3,8 @@
 :root {
   /* Palette */
   --verde: #5fee87;
-  --rosa: #dfabff;
-  --arancio: #ecac4c;
+  --rosa: #c738af;
+  --arancio: #f8f00d;
   --rosso: #ec5555;
   --grigiochiaro: #cdcdcd;
   --grigiomedio: #b7b6b6;
