--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,11 @@
   --nero: #000000;
 }
 
+* {
+  margin:0;
+  padding:0;
+}
+
 html,
 body {
   margin: 0;
@@ -21,6 +26,7 @@ body {
   font-weight: bold;
   color: var(--nero);
   overflow: hidden;
+  background-color: white;
 }
 
 canvas {
@@ -116,6 +122,7 @@ a {
   padding: 0.5%;
   z-index: 2;
   display: none;
+  overflow: scroll;
 }
 
 .about-container h1{
@@ -146,6 +153,11 @@ a {
   position: fixed;
   bottom: 0;
   margin: none;
+}
+
+.nav-placeholder {
+  width: 100%;
+  height: 50px;
 }
 
 
@@ -188,6 +200,7 @@ a {
   /* padding: 0.5%; */
   font-weight: bold;
   color: var(--nero);
+  position: absolute;
   /* background-color: var(--grigiomedio); */
 }
 
@@ -234,7 +247,6 @@ a {
 }
 
 #ascicanvas1 {
-  top: 20vh;
   width: 100vw;
   height: 100%;
   position: absolute;
