--- a/public/style.css
+++ b/public/style.css
@@ -213,13 +213,30 @@ a {
 }
 
 .chat-container {
+  width: 100%;
   height: 100%;
   z-index: 2;
   /* overflow: scroll; */
 }
 
-.collect-container h1 {
+.messages-container {
+  width: 100%;
+  height: calc(100% - 33px);
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.message {
+  padding: 10px 0;
+  width: 100%;
   font-size: 30pt;
+  line-height: 32pt;
+  font-weight: bold;
+  color: var(--nero);
+}
+
+.collect-container h1 {
+  font-size: 16pt;
   margin-top: 30px;
   margin-left: 0.5%;
 }
@@ -296,6 +313,8 @@ canvas {
   font-size: 20px;
   border-radius: 0 3px 3px 0;
   right: 5vh;
+  cursor: pointer;
+  user-select: none;
 }
 
 .active {
